<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:descendantFocusability="blocksDescendants"
    android:layout_alignParentStart="true">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtTaskListName"
        android:id="@+id/txtTaskListName"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/txtTaskListDate"
    android:id="@+id/txtTaskListDate"
        android:layout_below="@+id/txtTaskListName"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="0dp" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/txtTaskListTime"
    android:id="@+id/txtTaskListTime"
    android:layout_marginLeft="5dp"
        android:layout_below="@+id/txtTaskListDate"
        android:layout_alignParentStart="true" />

</RelativeLayout>

