<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".EditTask">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar_edit_task" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEditName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtTaskName"
        android:gravity="center_horizontal"
        android:focusable="true"
        android:singleLine="true"
        android:focusableInTouchMode="true"
        android:imeOptions="actionDone"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/toolbar_edit_task"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        style="?android:attr/spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEditDate"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtTaskDate"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_alignParentEnd="false"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/txtEditName"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        style="?android:attr/spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEditTime"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtTaskTime"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtEditDate"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarEditFreq"
        android:layout_below="@+id/txtEditFreqDisp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="60dp"
        android:max="4"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtEditFreqDisp"
        android:layout_below="@+id/txtEditFreq"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/freqDisplay"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/frequency"
        android:id="@+id/txtEditFreq"
        android:layout_marginRight="0dp"
        android:layout_below="@+id/txtEditTime"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

</RelativeLayout>