<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/_MyTasksTheme"
    tools:context=".AddTask"
    style="@style/_MyTasksTheme">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTaskName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtTaskName"
        android:focusable="true"
        android:singleLine="true"
        android:focusableInTouchMode="true"
        android:imeOptions="actionDone"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:theme="@style/_MyTasksTheme" />

    <EditText
        style="?android:attr/spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTaskDate"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtTaskDate"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/txtTaskName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:theme="@style/_MyTasksTheme"
        android:paddingLeft="10dp" />

    <EditText
        style="?android:attr/spinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTaskTime"
        android:layout_gravity="center_horizontal"
        android:hint="@string/txtTaskTime"
        android:clickable="true"
        android:layout_below="@+id/txtTaskDate"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:theme="@style/_MyTasksTheme"
        android:paddingLeft="10dp" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarFreq"
        android:layout_marginLeft="60dp"
        android:max="4"
        android:progress="0"
        android:indeterminate="false"
        android:theme="@style/_MyTasksTheme"
        android:layout_below="@+id/txtFreqDisp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtFreqDisp"
        android:hint="@string/freqDisplay"
        android:theme="@style/_MyTasksTheme"
        style="@style/_MyTasksTheme"
        android:layout_below="@+id/txtFreq"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/_MyTasksTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/frequency"
        android:id="@+id/txtFreq"
        android:hint="@string/freqDisplay"
        android:theme="@style/_MyTasksTheme"
        android:layout_below="@+id/txtTaskTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>